Switch to sun.misc.Unsafe